<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textview_address_title"
            android:text="@string/address_title"
            android:textSize="18sp"
            android:layout_centerVertical="true"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="18dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textview_address"
            android:text="@string/address"
            android:textSize="14sp"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@id/textview_address_title"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="0dp"
            android:id="@+id/button_connect"
            android:textColor="@color/orange"
            android:layout_alignParentEnd="true"
            style="?attr/borderlessButtonStyle"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/device_ll"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/did_title"
                android:textSize="18sp"/>
            <TextView
                android:layout_width="80dp"
                android:layout_height="20dp"
                android:id="@+id/textview_did"
                android:layout_marginStart="12dp">
            </TextView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/group_ll"
            android:layout_below="@id/device_ll"
            android:orientation="horizontal"
            android:layout_marginTop="4dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gid_title"
                android:textSize="18sp"/>
            <TextView
                android:layout_width="80dp"
                android:layout_height="20dp"
                android:id="@+id/textview_gid"
                android:layout_marginStart="16dp">
            </TextView>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rssi"
            android:layout_alignEnd="@id/device_ll"
            android:layout_marginEnd="24dp"
            android:text="@string/rssi"
            android:textSize="32sp"/>

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radio_group"
            android:layout_below="@id/group_ll"
            android:orientation="horizontal"
            android:layout_marginTop="16dp">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleX="0.75"
                android:scaleY="0.75"
                android:id="@+id/radioButton_device"
                android:text="@string/device"
                android:textSize="16sp"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleX="0.75"
                android:scaleY="0.75"
                android:layout_marginStart="2dp"
                android:id="@+id/radioButton_group"
                android:text="@string/group"
                android:textSize="16sp"/>
        </RadioGroup>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="40"
        android:orientation="horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_off"
            android:text="@string/off"
            android:textColor="@color/emerald"
            android:layout_weight="8"
            style="?attr/borderlessButtonStyle"/>
        <org.adw.library.widgets.discreteseekbar.DiscreteSeekBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="24"
            android:layout_gravity="center"
            android:id="@+id/seekbar_bright"
            app:dsb_min="0"
            app:dsb_max="20"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_on"
            android:text="@string/on"
            android:textColor="@color/emerald"
            android:layout_weight="8"
            style="?attr/borderlessButtonStyle"/>

    </LinearLayout>

</LinearLayout>